# vlm-tg-context-v2

./: .gitignore  01-data_processing.qmd  02-main_plots.qmd  03-error_analysis.qmd  README.md  analysis.qmd  download_osf.R  environment.yml  pyproject.toml  requirements.txt  setup.py  upload_osf.R  vlm-tg-context.Rproj
analysis_scripts/: logprobs.R  plot_helpers.R
context_prep/: context_prep.qmd
context_prep/full_feedback/: backward.csv  no_context.csv
data/: original_chat_spans.csv  original_chat_spans_irr.csv  trials_with_history_Qwen2.5-VL-32B-Instruct_logprobs.csv  trials_with_history_Qwen2.5-VL-7B-Instruct_logprobs.csv
scripts/: call_lm.py  compile_images.py  explore_results.py  rerun_banana_all.sh  rerun_banana_api.sh  rerun_banana_rows.py  run_claude.sh  run_claude_all.sh  run_full_feedback_all.sh  run_full_feedback_api.sh  run_gemini.sh  run_gemini_all.sh  run_gemma.sh  run_gpt.sh  run_interactive_all.sh  run_llama_all.sh  run_model.sh  run_model_api.sh  run_no_image_all.sh  run_osf_uploading.sh  run_qwen3_vllm.sh  run_yoked_all.sh  set_up_conda.sh  set_up_uv.sh  set_up_uv_llama.sh
src/: interactive.py  lm.py  utils.py
tests/: test_banana_rerun.py  test_extracting_results.py  test_formatting.py  test_logprob_files.py
